--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   share: ^2.0.4
   url_launcher: ^6.0.20
   bloc: ^8.1.1
@@ -37,33 +38,30 @@ dependencies:
   shared_preferences: ^2.0.18
   flutter_screenutil: ^5.7.0
   shimmer: ^2.0.0
-  smooth_page_indicator: ^1.0.0+2
+  smooth_page_indicator: ^1.1.0
   conditional_builder_null_safety: ^0.0.6
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.5
   dio: ^5.0.2
-#  http: ^0.13.5
   auto_size_text: ^3.0.0
-  like_button: ^2.0.5
+  badges: ^2.0.2
   sqflite: ^2.2.6
   lottie: ^2.3.0
   sliding_clipped_nav_bar: ^3.1.0+4
   flutter_staggered_animations: ^1.1.1
-#  video_player: ^2.6.0
-#  floating_bottom_navigation_bar: ^1.5.2
-#  google_nav_bar: ^5.0.6
-#  flutter_staggered_grid_view: ^0.6.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.0"
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/letter.png"
+  min_sdk_android: 17
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
@@ -78,21 +76,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    - assets/foody intro/render/
+#    - assets/foody intro/render/
   fonts:
     - family: James Stroker
       fonts:
         - asset: assets/fonts/James Stroker.ttf
           weight: 800
-#    - family: Poppins
-#      fonts:
-#        - asset: fonts/Poppins-Regular.ttf
-#          weight: 400
-#    - family: lato
-#      fonts:
-#        - asset: fonts/Lato-Regular.ttf
-#          weight: 400
-#        - asset: fonts/Lato-Bold.ttf
-#          weight: 800
-#        - asset: fonts/Lato-BlackItalic.ttf
-#          style: italic
